$NetBSD: CHANGES-2012,v 1.3548 2012/11/13 11:57:31 wen Exp $

Changes to the packages collection and infrastructure in 2012:

	Updated net/xnap to 2.0nb2 [ryoon 2012-01-01]
	Updated cross/h8300-hms-gcc to 3.1nb6 [dholland 2012-01-02]
	Updated security/cy2-gssapi to 2.1.25nb1 [obache 2012-01-02]
	Updated audio/alsa-lib to 1.0.22 [sbd 2012-01-02]
	Updated devel/cutter to 1.2.0 [obache 2012-01-02]
	Updated www/contao210-translations to 20111231 [taca 2012-01-02]
	Updated pkgtools/port2pkg to 1.12 [joerg 2012-01-02]
	Updated textproc/mdoclint to 1.14 [wiz 2012-01-02]
	Updated net/ldns to 1.6.11nb1 [pettai 2012-01-02]
	Updated math/ntl to 5.5.2 [dholland 2012-01-02]
	Updated cad/boolean to 6.99nb9 [dholland 2012-01-03]
	Updated emulators/xm7 to 1020s [obache 2012-01-03]
	Updated multimedia/gst-plugins0.10-bad to 0.10.22nb2 [sbd 2012-01-03]
	Updated lang/php53 to 5.3.8nb2 [taca 2012-01-03]
	Updated x11/rxvt-unicode to 9.06nb5 [wiz 2012-01-04]
	Updated devel/ogre to 1.6.3nb5 [dholland 2012-01-04]
	Updated databases/sdbm to 90.12.1nb2 [dholland 2012-01-04]
	Updated lang/basic256 to 0.9.6.66nb1 [dholland 2012-01-04]
	Updated misc/zyGrib to 5.0.6nb2 [dholland 2012-01-04]
	Updated lang/swi-prolog-packages to 5.11.18nb2 [dholland 2012-01-04]
	Updated www/wordpress to 3.3.1 [morr 2012-01-04]
	Updated mail/spamdyke to 4.2.1 [schmonz 2012-01-05]
	Updated devel/xulrunner to 8.0nb1 [sbd 2012-01-05]
	Updated pkgtools/pkglint to 4.106 [wiz 2012-01-06]
	Updated security/openssl to 0.9.8s [taca 2012-01-06]
	Updated archivers/gtar-info to 1.26nb1 [obache 2012-01-06]
	Updated devel/ruby-gnome2-glib to 1.0.3nb1 [obache 2012-01-06]
	Updated www/contao210-translations to 20120103 [taca 2012-01-07]
	Updated emulators/suse113_base to 11.3nb8 [chs 2012-01-07]
	Updated emulators/suse113_freetype2 to 11.3nb4 [chs 2012-01-07]
	Updated mail/thunderbird to 8.0nb1 [sbd 2012-01-07]
	Updated mail/msmtp to 1.4.27 [obache 2012-01-08]
	Updated x11/xdm3d to 1.0nb5 [dholland 2012-01-08]