@@ -1,8 +1,7 @@
-# $NetBSD: Makefile,v 1.6 2012/10/03 21:55:47 wiz Exp $
+# $NetBSD: Makefile,v 1.7 2012/10/31 11:19:12 asau Exp $
 
-DISTNAME=	Test-use-ok-0.02
+DISTNAME=	Test-use-ok-0.11
 PKGNAME=	p5-${DISTNAME}
-PKGREVISION=	4
 CATEGORIES=	devel perl5
 MASTER_SITES=	${MASTER_SITE_PERL_CPAN:=Test/}
 
