@@ -1,4 +1,4 @@
-$NetBSD: patch-ak,v 1.1 2002/09/16 15:00:21 mycroft Exp $
+$NetBSD: patch-ak,v 1.2 2003/10/09 22:14:13 kristerw Exp $
 
 --- nsgmls/RastEventHandler.cxx.orig	Fri Sep 16 14:43:02 2022
 +++ nsgmls/RastEventHandler.cxx	Fri Sep 16 14:44:18 2022
@@ -7,7 +7,7 @@ $NetBSD: patch-ak,v 1.1 2002/09/16 15:00:21 mycroft Exp $
  #endif
  
 -#if SIZEOF_SIZE_T == 8
-+#if defined(_LP64) || defined(__arm__)
++#if !defined(__APPLE__) && (defined(_LP64) || defined(__arm__))
  #ifdef __DECCXX
  #pragma define_template Vector<size_t>
  #else
