@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2012,v 1.3548 2012/11/13 11:57:31 wen Exp $
+$NetBSD: CHANGES-2012,v 1.3551 2012/11/13 16:23:01 pettai Exp $
 
 Changes to the packages collection and infrastructure in 2012:
 
@@ -5420,3 +5420,6 @@ Changes to the packages collection and infrastructure in 2012:
 	Updated comms/asterisk10 to 10.10.0 [jnemeth 2012-11-13]
 	Updated time/p5-DateTime-TimeZone to 1.54 [wen 2012-11-13]
 	Updated devel/p5-Test-Compile to 0.22 [wen 2012-11-13]
+	Updated devel/p5-Test-use-ok to 0.11 [wen 2012-11-13]
+	Updated net/ldns to 1.6.16 [pettai 2012-11-13]
+	Updated security/opendnssec to 1.3.11 [pettai 2012-11-13]
